--- a/Yolov5_DeepSort.ipynb
+++ b/Yolov5_DeepSort.ipynb
@@ -30,7 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7gz3irgVxII",
-        "outputId": "2f84f938-e0bc-4ecd-fceb-ce301b6af0ab"
+        "outputId": "37206eab-5340-4c3e-8ba7-8593cea7d8fa"
       },
       "execution_count": null,
       "outputs": [
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QXE_OogoV9Nf",
-        "outputId": "380bcc2c-f687-4761-bcea-f365b2b1e107"
+        "outputId": "2f22556b-ac22-4d40-a524-c7db101a3465"
       },
       "execution_count": null,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "taGCP-gCgqX8",
-        "outputId": "73439a2b-2244-45d0-cc79-afec79ac26d3"
+        "outputId": "b0c4be76-fd32-4719-9768-0e196a26b91a"
       },
       "outputs": [
         {
@@ -115,6 +115,7 @@
         "from IPython.display import Image, clear_output  # to display images\n",
         "\n",
         "clear_output()\n",
+        "\n",
         "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
       ]
     },
@@ -126,7 +127,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e4b978a-56ad-41a8-b604-ecd67a2d19b6"
+        "outputId": "b2a0f4ed-16ac-4afe-8618-0348ddee1088"
       },
       "outputs": [
         {
@@ -324,7 +325,10 @@
       },
       "outputs": [],
       "source": [
-        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/yolov5/runs/train/exp/weights/best.pt\" --strong-sort-weights osnet_x0_25_msmt17.pt --source \"/content/drive/MyDrive/colab/videos/cruise_ship.mp4\" --save-vid"
+        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/yolov5/runs/train/exp/weights/best.pt\" \\\n",
+        "                 --strong-sort-weights osnet_x0_25_msmt17.pt \\\n",
+        "                 --source \"/content/drive/MyDrive/colab/videos/cruise_ship.mp4\" \\\n",
+        "                 --save-vid"
       ]
     },
     {
@@ -355,70 +359,14 @@
       },
       "outputs": [],
       "source": [
-        "!ffmpeg -ss 00:00:23 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp/cruise_ship.mp4\" -frames:v 1 /content/drive/MyDrive/colab/screenshots/cruise_ship.png\n",
+        "!ffmpeg -ss 00:00:19 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp/cruise_ship.mp4\" -frames:v 1 /content/drive/MyDrive/colab/screenshots/cruise_ship.png\n",
         "clear_output()"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "%cd /content/drive/MyDrive/colab/yolov5/"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FR9_6FYq84rP",
-        "outputId": "66b6870b-c60c-414e-d96b-3313703e4c48"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/MyDrive/colab/yolov5\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import utils\n",
-        "\n",
-        "display = utils.notebook_init()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "m0pXUFCH9Ece",
-        "outputId": "72dccb54-e150-41e8-bf5c-35eb212f175b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:yolov5:YOLOv5 🚀 v6.1-340-g7b72d9a Python-3.7.13 torch-1.12.1+cu113 CUDA:0 (Tesla T4, 15110MiB)\n",
-            "YOLOv5 🚀 v6.1-340-g7b72d9a Python-3.7.13 torch-1.12.1+cu113 CUDA:0 (Tesla T4, 15110MiB)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 37.4/78.2 GB disk)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "display.Image(filename='/content/drive/MyDrive/colab/screenshots/cruise_ship.png', width=700)"
+        "Image(filename='/content/drive/MyDrive/colab/screenshots/cruise_ship.png', width=700)"
       ],
       "metadata": {
         "colab": {
@@ -426,7 +374,7 @@
           "height": 411
         },
         "id": "L1LWw4-c9Ryl",
-        "outputId": "0e2d1979-a02c-474c-ff68-0d784f89ab61"
+        "outputId": "7ceba8bc-4149-4a6f-81f9-7b464898ff9d"
       },
       "execution_count": null,
       "outputs": [
@@ -443,7 +391,7 @@
               "width": 700
             }
           },
-          "execution_count": 20
+          "execution_count": 5
         }
       ]
     }
@@ -452,7 +400,6 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
-      "name": "Yolov5-DeepSort.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
