--- a/Yolov5_DeepSort_2.ipynb
+++ b/Yolov5_DeepSort_2.ipynb
@@ -30,7 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7gz3irgVxII",
-        "outputId": "f8b12d01-8faa-4882-fdbe-7bba61886a1d"
+        "outputId": "fffdcace-46ab-45e8-8396-da89231fcd3e"
       },
       "execution_count": null,
       "outputs": [
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QXE_OogoV9Nf",
-        "outputId": "37d7b896-e1ef-4c29-e411-e546f9a25c13"
+        "outputId": "8701d1db-ac43-4b23-f23e-508b804ad922"
       },
       "execution_count": null,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "taGCP-gCgqX8",
-        "outputId": "0ee9d10a-60fa-4741-bb21-56a1e542dc31"
+        "outputId": "3f739e1c-7a05-4871-fa92-5df61696f186"
       },
       "outputs": [
         {
@@ -115,6 +115,7 @@
         "from IPython.display import Image, clear_output  # to display images\n",
         "\n",
         "clear_output()\n",
+        "\n",
         "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
       ]
     },
@@ -284,7 +285,10 @@
       },
       "outputs": [],
       "source": [
-        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/yolov5/runs/train/exp2/weights/best.pt\" --strong-sort-weights osnet_x0_25_msmt17.pt --source \"/content/drive/MyDrive/colab/videos/windturbine_wevo.mp4\" --save-vid"
+        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/yolov5/runs/train/exp2/weights/best.pt\" \\\n",
+        "                 --strong-sort-weights osnet_x0_25_msmt17.pt \\\n",
+        "                 --source \"/content/drive/MyDrive/colab/videos/windturbine_wevo.mp4\" \\\n",
+        "                 --save-vid"
       ]
     },
     {
@@ -310,7 +314,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!ffmpeg -ss 00:00:19 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp2/windturbine_wevo.mp4\" -frames:v 1 /content/drive/MyDrive/colab/screenshots/windturbine_wevo.png\n",
+        "!ffmpeg -ss 00:00:20.5 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp2/windturbine_wevo.mp4\" -frames:v 1 /content/drive/MyDrive/colab/screenshots/windturbine_wevo.png\n",
         "clear_output()"
       ],
       "metadata": {
@@ -322,63 +326,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd /content/drive/MyDrive/colab/yolov5/"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "54tUgcYGjbVE",
-        "outputId": "ecb0350d-1644-4473-9472-804c5a8d9222"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/MyDrive/colab/yolov5\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import utils\n",
-        "\n",
-        "display = utils.notebook_init()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dPKQU69yjcuK",
-        "outputId": "ca3d999b-9503-4028-8b78-94d8d0485666"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:yolov5:YOLOv5 🚀 v6.1-340-g7b72d9a Python-3.7.13 torch-1.12.1+cu113 CUDA:0 (Tesla T4, 15110MiB)\n",
-            "YOLOv5 🚀 v6.1-340-g7b72d9a Python-3.7.13 torch-1.12.1+cu113 CUDA:0 (Tesla T4, 15110MiB)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 37.4/78.2 GB disk)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "display.Image(filename='/content/drive/MyDrive/colab/screenshots/windturbine_wevo.png', width=700)"
+        "Image(filename='/content/drive/MyDrive/colab/screenshots/windturbine_wevo.png', width=700)"
       ],
       "metadata": {
         "colab": {
@@ -412,7 +360,6 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
-      "name": "Yolov5-DeepSort-2.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
