--- a/Yolov5_DeepSort_2.ipynb
+++ b/Yolov5_DeepSort_2.ipynb
@@ -354,6 +354,15 @@
           "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**The full inference is available on the following link: https://vimeo.com/manage/videos/745868036/analytics.**"
+      ],
+      "metadata": {
+        "id": "_-HY55MZYNUo"
+      }
     }
   ],
   "metadata": {
