--- a/Yolov5_DeepSort.ipynb
+++ b/Yolov5_DeepSort.ipynb
@@ -264,37 +264,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xHYBze66-v08"
-      },
-      "source": [
-        "Download YOLOv5 pretrained weights"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!mkdir /content/drive/MyDrive/colab/weights"
-      ],
-      "metadata": {
-        "id": "zu-t2d0F8OGu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2f_kq_MjCU5n"
-      },
-      "outputs": [],
-      "source": [
-        "!wget \"https://github.com/ultralytics/yolov5/releases/download/v6.1/yolov5m.pt\" -O /content/drive/MyDrive/colab/weights/yolov5m.pt"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "%cd /content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet"
@@ -398,7 +367,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The full inference is available on the following link: https://vimeo.com/manage/videos/745866054."
+        "**The full inference is available on the following link: https://vimeo.com/manage/videos/745866054.**"
       ],
       "metadata": {
         "id": "C5w5Whg3Vakt"
