--- a/Yolov5_DeepSort.ipynb
+++ b/Yolov5_DeepSort.ipynb
@@ -30,7 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7gz3irgVxII",
-        "outputId": "fdf347ca-a9bd-4383-ec4e-bac0920ac93b"
+        "outputId": "7de9ee0a-02da-449c-cad0-57479dfb5e36"
       },
       "execution_count": null,
       "outputs": [
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QXE_OogoV9Nf",
-        "outputId": "f00a36b0-f285-42ec-a3ba-d36e30d73c07"
+        "outputId": "8eca7ad8-d20b-4f88-bb79-c54f02c44fa1"
       },
       "execution_count": null,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "taGCP-gCgqX8",
-        "outputId": "406fcea6-40eb-46a9-d53d-3bbd50df29f9"
+        "outputId": "28a386ab-bf74-44cb-9b14-ddfdc4037fab"
       },
       "outputs": [
         {
@@ -372,6 +372,29 @@
       "metadata": {
         "id": "C5w5Whg3Vakt"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir /content/drive/MyDrive/colab/results"
+      ],
+      "metadata": {
+        "id": "fQ2JQ6ixGEoV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ffmpeg -ss 00:00:2 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp/cruise_ship.mp4\" -t 3 /content/drive/MyDrive/colab/results/cruise_ship.gif\n",
+        "clear_output()"
+      ],
+      "metadata": {
+        "id": "Kxu9m80eFvp2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
