--- a/Yolov5_DeepSort_2.ipynb
+++ b/Yolov5_DeepSort_2.ipynb
@@ -30,7 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7gz3irgVxII",
-        "outputId": "fffdcace-46ab-45e8-8396-da89231fcd3e"
+        "outputId": "5953469f-6949-4421-ef4f-dcd3c0e9b301"
       },
       "execution_count": null,
       "outputs": [
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QXE_OogoV9Nf",
-        "outputId": "8701d1db-ac43-4b23-f23e-508b804ad922"
+        "outputId": "949b022a-f18e-4505-9013-fdc3cf0f8601"
       },
       "execution_count": null,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "taGCP-gCgqX8",
-        "outputId": "3f739e1c-7a05-4871-fa92-5df61696f186"
+        "outputId": "fa0224db-951e-43e5-ed5a-3c0b03156927"
       },
       "outputs": [
         {
@@ -363,6 +363,29 @@
       "metadata": {
         "id": "_-HY55MZYNUo"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir /content/drive/MyDrive/colab/results"
+      ],
+      "metadata": {
+        "id": "4NZhlporJU1w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ffmpeg -ss 00:00:20 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp2/windturbine_wevo.mp4\" -t 3 /content/drive/MyDrive/colab/results/windturbine.gif\n",
+        "clear_output()"
+      ],
+      "metadata": {
+        "id": "608z3Df-I-M9"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
