--- a/Yolov5_DeepSort_3.ipynb
+++ b/Yolov5_DeepSort_3.ipynb
@@ -211,10 +211,28 @@
         "    yt = yt.streams.filter(progressive=True, file_extension='mp4').order_by('resolution').desc().first()\n",
         "    if not os.path.exists(path):\n",
         "        os.makedirs(path)\n",
-        "    yt.download(path)\n",
-        "\n",
-        "downloadYouTube('https://www.youtube.com/watch?v=X6Thg-fjFsY', '/content/drive/MyDrive/colab/videos')"
+        "    yt.download(path)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Video 1"
+      ],
+      "metadata": {
+        "id": "wXpwXOFknnhI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "downloadYouTube('https://www.youtube.com/watch?v=X6Thg-fjFsY', '/content/drive/MyDrive/colab/videos')"
+      ],
+      "metadata": {
+        "id": "0OTQya9AnlVR"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -243,11 +261,56 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Video 2"
+      ],
+      "metadata": {
+        "id": "rzDgknc_npxl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "downloadYouTube('https://www.youtube.com/watch?v=6Qa1O39X_Es', '/content/drive/MyDrive/colab/videos')"
+      ],
+      "metadata": {
+        "id": "CkHTNFscnx16"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# extract seconds worth of video frames of it\n",
+        "!yes | ffmpeg -ss 00:0:10 -i \"/content/drive/MyDrive/colab/videos/Port of Singapore.mp4\" -t 50 -c copy /content/drive/MyDrive/colab/videos/portofsingapore.avi\n",
+        "clear_output()"
+      ],
+      "metadata": {
+        "id": "5z0ui6Ztnyeh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ffmpeg -i \"/content/drive/MyDrive/colab/videos/portofsingapore.avi\" /content/drive/MyDrive/colab/videos/portofsingapore.mp4\n",
+        "clear_output()"
+      ],
+      "metadata": {
+        "id": "tsHm42pqn2nU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "oqIP5shr9HQd"
       },
       "source": [
-        "# Run inference on video\n",
+        "# Run inference on videos\n",
         "\n",
         "The ``cv2.imshow()`` and ``cv.imshow()`` functions from the [opencv-python](https://github.com/skvark/opencv-python) package are incompatible with Jupyter notebook; see https://github.com/jupyter/notebook/issues/3935. \n",
         "\n",
