--- a/Yolov5_DeepSort_3.ipynb
+++ b/Yolov5_DeepSort_3.ipynb
@@ -30,7 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7gz3irgVxII",
-        "outputId": "ab42d540-f5bb-4d1d-a5ab-14558e201f41"
+        "outputId": "93e0cd4d-7346-4700-d0ed-7c8f427bf637"
       },
       "execution_count": null,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "taGCP-gCgqX8",
-        "outputId": "ec828727-0a4b-45f0-a585-80cd30ce3b70"
+        "outputId": "2e651450-6e3d-4c51-ca04-c564fa79b79e"
       },
       "outputs": [
         {
@@ -363,38 +363,39 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget \"https://github.com/ultralytics/yolov5/releases/download/v6.1/yolov5l.pt\" -O /content/drive/MyDrive/colab/weights/yolov5l.pt"
+        "!wget \"https://github.com/ultralytics/yolov5/releases/download/v6.1/yolov5x.pt\" -O /content/drive/MyDrive/colab/weights/yolov5x.pt"
       ],
       "metadata": {
-        "id": "hr49QjmB8q2g"
+        "id": "vQURjiJvv9x0"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "4yEraJfKhBku"
-      },
-      "outputs": [],
       "source": [
-        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/weights/yolov5l.pt\" \\\n",
+        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/weights/yolov5x.pt\" \\\n",
         "                 --strong-sort-weights osnet_x0_25_msmt17.pt \\\n",
         "                 --source \"/content/drive/MyDrive/colab/videos/port.mp4\" \\\n",
         "                 --save-vid"
-      ]
+      ],
+      "metadata": {
+        "id": "cvbfJXVCwFq3"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/weights/yolov5l.pt\" \\\n",
+        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/weights/yolov5x.pt\" \\\n",
         "                 --strong-sort-weights osnet_x0_25_msmt17.pt \\\n",
         "                 --source \"/content/drive/MyDrive/colab/videos/portofsingapore.mp4\" \\\n",
+        "                 --line-thickness 2 \\\n",
         "                 --save-vid"
       ],
       "metadata": {
-        "id": "GAqr_pK9-7cT"
+        "id": "OkPK31THxJqu"
       },
       "execution_count": null,
       "outputs": []
@@ -412,7 +413,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "2Li92dNGAnGp"
+        "id": "0-hAuvP671-9"
       },
       "execution_count": null,
       "outputs": []
