--- a/Yolov5_DeepSort_3.ipynb
+++ b/Yolov5_DeepSort_3.ipynb
@@ -30,7 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7gz3irgVxII",
-        "outputId": "a7927c4f-860b-4bb5-ba32-42a400bf0ded"
+        "outputId": "f26f1d4f-549c-470c-8fd6-532401a600b8"
       },
       "execution_count": null,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "taGCP-gCgqX8",
-        "outputId": "23679bc5-6dc5-49ca-c7aa-c4ebd6256d5e"
+        "outputId": "03e5cfec-4178-432a-de25-9c18c16ebb06"
       },
       "outputs": [
         {
@@ -467,6 +467,29 @@
     {
       "cell_type": "code",
       "source": [
+        "!mkdir /content/drive/MyDrive/colab/results"
+      ],
+      "metadata": {
+        "id": "ehMGx1RhBSwo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ffmpeg -ss 00:00:00 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp3/port.mp4\" -t 3 /content/drive/MyDrive/colab/results/port.gif\n",
+        "clear_output()"
+      ],
+      "metadata": {
+        "id": "w8dN-j37Aqn7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!ffmpeg -ss 00:00:3 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp4/portofsingapore.mp4\" -frames:v 1 /content/drive/MyDrive/colab/screenshots/portofsingapore.png\n",
         "clear_output()"
       ],
@@ -507,6 +530,18 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ffmpeg -ss 00:00:02 -i \"/content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet/runs/track/exp4/portofsingapore.mp4\" -t 3 /content/drive/MyDrive/colab/results/portofsingapore.gif\n",
+        "clear_output()"
+      ],
+      "metadata": {
+        "id": "zQrg3qCdAu0-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
