--- a/Yolov5_DeepSort.ipynb
+++ b/Yolov5_DeepSort.ipynb
@@ -287,6 +287,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**To use the following weights, it is necessary to do an evolution of the hyperparameters in the YOLOv5-Hyperparameter-Evolution Notebook. The evoultion takes a huge amount of time, and hence to speed up the process you can stop it when the performance measures have reached the convergence state. Then train the slected YOLOv5 model and save the weights.**"
+      ],
+      "metadata": {
+        "id": "ZfBGIie4c3EU"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -294,7 +303,7 @@
       },
       "outputs": [],
       "source": [
-        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/yolov5/runs/train/exp/weights/best.pt\" \\\n",
+        "  !python track.py --yolo-weights \"/content/drive/MyDrive/colab/yolov5/runs/train/exp/weights/best.pt\" \\\n",
         "                 --strong-sort-weights osnet_x0_25_msmt17.pt \\\n",
         "                 --source \"/content/drive/MyDrive/colab/videos/cruise_ship.mp4\" \\\n",
         "                 --save-vid"
