--- a/Yolov5_DeepSort_2.ipynb
+++ b/Yolov5_DeepSort_2.ipynb
@@ -278,6 +278,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**To use the following weights, it is necessary to do an evolution of the hyperparameters in the YOLOv5-Hyperparameter-Evolution-2 Notebook. The evoultion takes a huge amount of time, and hence to speed up the process you can stop it when the performance measures have reached the convergence state. Then train the slected YOLOv5 model and save the weights.**"
+      ],
+      "metadata": {
+        "id": "aAiJHWSKijOM"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
