--- a/YOLOv5_Hyperparameter_Evolution.ipynb
+++ b/YOLOv5_Hyperparameter_Evolution.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOj4G5nEjYq0wtUQsn/Mbc9",
+      "authorship_tag": "ABX9TyOvqsZRJd5DADcGgI33HJnL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -216,6 +216,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This dataset includes 1351 images of the next ship types:\n",
+        "* Container Ship\n",
+        "* Cruise Ship\n",
+        "* Military Ship\n",
+        "* RORO\n",
+        "* Tanker\n",
+        "\n",
+        "Ships are annotated in YOLO v5 PyTorch format.\n",
+        "\n",
+        "The following pre-processing was applied to each image:\n",
+        "* Auto-orientation of pixel data (with EXIF-orientation stripping)\n",
+        "* Resize to 416x416 (Stretch)\n",
+        "\n",
+        "No image augmentation techniques were applied."
+      ],
+      "metadata": {
+        "id": "Ahmef-WVrgFz"
+      }
     },
     {
       "cell_type": "markdown",
