--- a/YOLOv5_Hyperparameter_Evolution_2.ipynb
+++ b/YOLOv5_Hyperparameter_Evolution_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMw4wlgL55wsnSE2cH1dvb4",
+      "authorship_tag": "ABX9TyOJ5Iw/kiuqTg+JVKDLEIen",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -216,6 +216,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This dataset includes 2995 zoomed in images of a complete windturbine, annotated with damage and dirt classes in YOLO v5 PyTorch format.\n",
+        "\n",
+        "No image augmentation techniques were applied."
+      ],
+      "metadata": {
+        "id": "9nc1ikOgsJOf"
+      }
     },
     {
       "cell_type": "markdown",
