--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN2Oc6fLh+CCusIt/0W7HGl",
+      "authorship_tag": "ABX9TyPMTY0jn5fDhytC4Q1c3gcS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,6 +137,27 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The corrosion-classification dataset includes 711 images of different objects affected and not affected by corrosion.\n",
+        "\n",
+        "The following pre-processing was applied to each image:\n",
+        "* Auto-orientation of pixel data (with EXIF-orientation stripping)\n",
+        "* Resize to 416x416 (Stretch)\n",
+        "\n",
+        "The following augmentation was applied to create 3 versions of each source image:\n",
+        "* 50% probability of horizontal flip\n",
+        "* 50% probability of vertical flip\n",
+        "* Equal probability of one of the following 90-degree rotations: none, clockwise, counter-clockwise, upside-down\n",
+        "* Random brigthness adjustment of between -12 and +12 percent\n",
+        "* Random exposure adjustment of between -5 and +5 percent\n",
+        "* Random Gaussian blur of between 0 and 0.5 pixels"
+      ],
+      "metadata": {
+        "id": "H7XlsnYDjZsy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!mkdir \"/content/drive/MyDrive/colab/corrosion_dataset\"\n",
@@ -157,24 +178,6 @@
       ],
       "metadata": {
         "id": "ZOkxrSDYBaPQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "The next preprocessing and augmentations steps were applied:\n",
-        "- Auto-Orient: Applied\n",
-        "- Resize: Stretch to 416x416\n",
-        "- Outputs per training example: 3\n",
-        "- Flip: Horizontal, Vertical\n",
-        "- 90° Rotate: Clockwise, Counter-Clockwise, Upside Down\n",
-        "- Saturation: Between -15% and +15%\n",
-        "- Brightness: Between -12% and +12%\n",
-        "- Exposure: Between -5% and +5%\n",
-        "- Blur: Up to 0.5px"
-      ],
-      "metadata": {
-        "id": "azi-vShqLxCd"
       }
     },
     {
