--- a/YOLOv5_Custom_Training.ipynb
+++ b/YOLOv5_Custom_Training.ipynb
@@ -238,7 +238,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**The dataset comprises 508 images of aerial maritime photographs taken with via a Mavic Air 2 drone and 1,151 bounding boxes, consisting of docks, boats, lifts, jetskis, and cars.**\n",
+        "**The dataset comprises 508 images of aerial maritime photographs taken via a Mavic Air 2 drone and 1,151 bounding boxes, consisting of docks, boats, lifts, jetskis, and cars.**\n",
         "\n",
         "**No augmentation steps were applied in this dataset.**"
       ],
