--- a/Yolov5_DeepSort_3.ipynb
+++ b/Yolov5_DeepSort_3.ipynb
@@ -310,11 +310,7 @@
         "id": "oqIP5shr9HQd"
       },
       "source": [
-        "# Run inference on videos\n",
-        "\n",
-        "The ``cv2.imshow()`` and ``cv.imshow()`` functions from the [opencv-python](https://github.com/skvark/opencv-python) package are incompatible with Jupyter notebook; see https://github.com/jupyter/notebook/issues/3935. \n",
-        "\n",
-        "Hence we chose to save it to file in this notebook. Locally you can use the ``--show-vid`` flag in order to visualize the tracking in real-time."
+        "# Run inference on videos"
       ]
     },
     {
