--- a/Yolov5_DeepSort_2.ipynb
+++ b/Yolov5_DeepSort_2.ipynb
@@ -247,11 +247,7 @@
         "id": "oqIP5shr9HQd"
       },
       "source": [
-        "# Run inference on video\n",
-        "\n",
-        "The ``cv2.imshow()`` and ``cv.imshow()`` functions from the [opencv-python](https://github.com/skvark/opencv-python) package are incompatible with Jupyter notebook; see https://github.com/jupyter/notebook/issues/3935. \n",
-        "\n",
-        "Hence we chose to save it to file in this notebook. Locally you can use the ``--show-vid`` flag in order to visualize the tracking in real-time."
+        "# Run inference on video"
       ]
     },
     {
@@ -400,7 +396,6 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
       "provenance": [],
       "include_colab_link": true
     },
